--- a/index.html
+++ b/index.html
@@ -5,85 +5,113 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>05 - Bootstrap Grid</title>
-        <link
-          rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        />
-        <link rel="stylesheet" href="../styles.css" />
-        <link rel="stylesheet" href="hw-styles.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://use.fontawesome.com/8d421130f8.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/styles.css" />
       </head>
 
-<body>
+<body class="bg-dark">
     <main>
-        <div class="container">
-            <div class="header">
-                <h1>George</h1>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <h1 class="header-h1"><i class="fa fa-terminal"></i>George</h1>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Projects and Experience</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Content</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="row">
+          </nav>
+        
+        <div class="container">
+            <div class="row project-section">
                 <div class="col-12">
-                    <h2>Portland State University Student Media (2019-present)</h2>
+                    <h2>Projects and Experience:~</h2>
+                </div>
+            </div>
+            <div class="row project-section">
+                <div class="col-12">
+                    <h3>Portland State University Student Media (2019-present)</h3>
                 </div>
                 <div class="col-md-4">
-                    <h3>KPSU RadioCo Player</h3>
+                    <h4>KPSU RadioCo Player</h4>
                     <p>A custom radio player for the new website redesign for Portland State University’s radio station. I used RadioCo’s DIY Radio builder kit as a starting point and created a WordPress template that implements RadioCo streaming functionality with a clean layout that matches the site’s new identity. The player opens in a separate browser window so music can play in the background without relying on an AJAX Wordpress template.</p>
                 </div>
                 <div class="col-md-4">
-                    <h3>SALPies</h3>
-                    <p>A website built for an awards ceremony for SALP leaders at Portland State University, hosted digitally during the COVID-19 pandemic. This website used HTML & CSS and custom JavaScript to create a unique digital experience similar to what would normally be hosted in-person at the university. The design was created by our designer and I built out the website.</p>
+                    <h4>SALPies</h4>
+                    <img class="img-fluid" src="img/salpies.png" alt="Screenshot of the SALPies website design as seen when it was live"/>
+                    <a type="button" data-bs-toggle="collapse" data-bs-target="#SALP" aria-expanded="false" aria-controls="SALP">Read More</a>
+                    <div class="collapse" id="SALP">
+                        <p>A website built for an awards ceremony for SALP leaders at Portland State University, hosted digitally during the COVID-19 pandemic. This website used HTML & CSS and custom JavaScript to create a unique digital experience similar to what would normally be hosted in-person at the university. The design was created by our designer and I built out the website.</p>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <h3>Party In The Park 2020</h3>
-                    <p>A website built to serve as a virtual fair during the COVID-19 pandemic in 2020. This website contained a list of events similar to an in-person Party In The Park fair. This website was built using node and PHP with .php web pages generated using a custom code generation tool to pull organization data from a spreadsheet and create web pages for each organization. Our designer was responsible for designing the assets and I helped my fellow developer build out the templates and created the generator.</p>
+                    <h4>Party In The Park 2020</h4>
+                    <img class="img-fluid" src="img/PIP_screen.jpg" alt="Screenshot of Party In The Park 2020's website design as seen when it was live"/>
+                    <a type="button" data-bs-toggle="collapse" data-bs-target="#PIP" aria-expanded="false" aria-controls="PIP">Read More</a>
+                    <div class="collapse" id="PIP">
+                        <p>A website built to serve as a virtual fair during the COVID-19 pandemic in 2020. This website contained a list of events similar to an in-person Party In The Park fair. This website was built using node and PHP with .php web pages generated using a custom code generation tool to pull organization data from a spreadsheet and create web pages for each organization. Our designer was responsible for designing the assets and I helped my fellow developer build out the templates and created the generator.</p>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <h3>Sub Basement Studios</h3>
+                    <h4>Sub Basement Studios</h4>
                     <p>A website redesign & rebranding for Portland State University’s student-run production house. Our designer created several mockups for page layouts and created all of the assets, and I built out the custom WordPress templates. </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row project-section">
                 <div class="col-12">
-                    <h2>Fringe Digital Marketing (2016)</h2>
+                    <h3>Fringe Digital Marketing (2016)</h3>
                 </div>
                 <div class="col-md-4">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="col-md-4">
-                    <h3>WRK Engineers</h3>
+                    <h4>WRK Engineers</h4>
                     <p>A robust WordPress website built for an engineering firm based in Vancouver, Washington. The website contains custom post types for projects and other items. Contains custom navigation functionality within project categories, as well. My supervisor managed the design of assets and mockups, and I built out the WordPress theme from scratch and handled the functionality.</p>
                 </div>
                 <div class="col-md-4">
-                    <h3>Somarakis</h3>
+                    <h4>Somarakis</h4>
                     <p>A WordPress website built for a company that manufactures liquid ring vacuum pumps in Kalama, Washington. This website was designed by my supervisor and I built out the template and other functionality.</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row project-section">
                 <div class="col-12">
-                    <h2>SKIDATA Loyalty.Logic (2017-2019)</h2>
+                    <h3>SKIDATA Loyalty.Logic (2017-2019)</h3>
                 </div>
                 <div class="col-md-4">
-                    <h3>Loyalty Control Panel</h3>
+                    <h4>Loyalty Control Panel</h4>
                     <p>A new Angular-based web consoles for loyalty program management, including management of localization features for multiple languages and ensuring responsive design. </p>
                 </div>
                 <div class="col-md-4">
-                    <h3>Loyalty Scheduler</h3>
+                    <h4>Loyalty Scheduler</h4>
                     <p>A simple program that uses CRON triggers to run various jobs on any given interval. Examples include weekly & monthly SQL exports for clients, monthly information deletion.</p>
                 </div>
                 <div class="col-md-4">
-                    <h3>GDPR User Obfuscation</h3>
+                    <h4>GDPR User Obfuscation</h4>
                     <p>a new featured extended into the loyalty program that removes & obfuscates user data when requested by users, as required by EU law beginning in 2018.</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row project-section">
                 <div class="col-12">
-                    <h2>Educational Projects at Epicodus (2016) and Portland State University (2019-)</h2>
+                    <h3>Educational Projects at Epicodus (2016) and Portland State University (2019-)</h3>
                 </div>
                 <div class="col-md-4">
-                    <h3>.NET Event Manager</h3>
+                    <h4>.NET Event Manager</h4>
                     <p>An event manager using .NET and C# to manage events. Built for my capstone project at Epicodus programming school in Portland, OR.</p>
                 </div>
                 <div class="col-md-4">
-                    <h3>Stack Overflow</h3>
+                    <h4>Stack Overflow</h4>
                     <p> A website created in Node that replicates Stack Overflow’s functionality combined with Reddit-style upvote/downvote functionality as a proof of concept. </p>
                 </div>
             </div>
