Add jobs section for resume

--- a/index.html
+++ b/index.html
@@ -434,8 +434,9 @@
           </div>
         </div>
         <div class="row resume-section">
-          <div class="col-12">
-            <div class="job">
+            <div class="col-12">
+          <ul class="list-group bg-dark">
+            <li class="list-group-item job">
               <h4>Portland State University Student Media Technology Team</h4>
               <p class="role">Web Developer</p>
               <p class="dates">2019 - Present</p>
@@ -446,10 +447,8 @@
                 ullamcorper in elit id venenatis. Ut efficitur non purus ac
                 laoreet.
               </p>
-            </div>
-          </div>
-          <div class="col-12">
-            <div class="job">
+            </li>
+            <li class="list-group-item job">
               <h4>SKIDATA</h4>
               <p class="role">Entry Level Software Developer</p>
               <p class="dates">2017 - 2019</p>
@@ -460,10 +459,8 @@
                 ullamcorper in elit id venenatis. Ut efficitur non purus ac
                 laoreet.
               </p>
-            </div>
-          </div>
-          <div class="col-12">
-            <div class="job">
+            </li>
+            <li class="list-group-item job">
               <h4>Fringe Digital Marketing Agency</h4>
               <p class="role">Web Developer</p>
               <p class="dates">2014 - 2016</p>
@@ -474,8 +471,9 @@
                 ullamcorper in elit id venenatis. Ut efficitur non purus ac
                 laoreet.
               </p>
+            </li>
+        </ul>
             </div>
-          </div>
         </div>
         <div class="row resume-section">
             <div class="col-12">
@@ -484,7 +482,8 @@
         </div>
         <div class="row resume-section">
             <div class="col-12">
-                <div class="job">
+            <ul class="list-group bg-dark">
+                <li class="list-group-item job">
                   <h4>Portland State University</h4>
                   <p class="role">Masters in Computer Science</p>
                   <p class="dates">2022 - Present</p>
@@ -495,10 +494,8 @@
                     ullamcorper in elit id venenatis. Ut efficitur non purus ac
                     laoreet.
                   </p>
-                </div>
-              </div>
-              <div class="col-12">
-                <div class="job">
+                </li>
+                <li class="list-group-item job">
                   <h4>Epicodus</h4>
                   <p class="role">Software Development Certification</p>
                   <p class="dates">2016</p>
@@ -509,10 +506,8 @@
                     ullamcorper in elit id venenatis. Ut efficitur non purus ac
                     laoreet.
                   </p>
-                </div>
-              </div>
-              <div class="col-12">
-                <div class="job">
+                </li>
+                <li class="list-group-item job">
                   <h4>Washington State University Vancouver</h4>
                   <p class="role">Bachelor of Arts in Digital Technology & Culture</p>
                   <p class="dates">2010 - 2014</p>
@@ -523,17 +518,16 @@
                     ullamcorper in elit id venenatis. Ut efficitur non purus ac
                     laoreet.
                   </p>
-                </div>
-              </div>
+                </li>
+            </ul>
+        </div>
         </div>
       </div>
 
       <a name="about"></a>
       <div class="container">
         <div class="row project-header">
-          <div class="col-12">
             <h2>About Me:~</h2>
-          </div>
         </div>
         <div class="row project-section">
           <div class="col-12">
@@ -581,9 +575,7 @@
       <a name="contact"></a>
       <div class="container">
         <div class="row project-header">
-          <div class="col-12">
             <h2>Contact:~</h2>
-          </div>
         </div>
         <div class="row project-section">
           <div class="col-12">
