More padding for resume section

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           <ul class="list-group bg-dark">
             <li class="list-group-item job">
             <a name="studentmedia"></a>
-              <h4>Portland State University Student Media Technology Team</h4>
+              <h4>Portland State University Student Media</h4>
               <p class="role">Web Developer</p>
               <p class="dates">2019 - Present</p>
               <p>
