--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Resume
+                  Experience
                 </a>
                 <ul
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
-                  <li><span class="dropdown-label">Professional</span></li>
                   <li>
                     <a class="dropdown-item" href="#studentmedia"
                       >Student Media Tech Team</a
@@ -72,7 +71,7 @@
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><span class="dropdown-label">Educational</span></li>
+                  <li><span class="dropdown-label">Education</span></li>
                   <li>
                     <a class="dropdown-item" href="#psu"
                       >Portland State University</a
@@ -89,9 +88,6 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
@@ -99,10 +95,39 @@
         </div>
       </nav>
 
+      <a name="about"></a>
+      <div class="container">
+        <div class="row project-section">
+          <div class="col-12">
+            <h3>Hi, I'm George.</h3>
+          </div>
+          <div class="col-sm-4">
+            <img
+              class="img-fluid"
+              src="img/george.jpeg"
+              alt="Photo of George"
+            />
+          </div>
+          <div class="col-md-4">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
+              Proin fermentum orci sit amet nisi finibus lacinia. Duis
+              ullamcorper in elit id venenatis.
+            </p>
+          </div>
+          <div class="col-md-4"><p>
+            Ut efficitur non purus ac
+            laoreet. In a leo non velit posuere ultrices. Etiam vitae massa
+            sapien. Etiam auctor dolor quis sem malesuada ultricies.</p>
+          </div>
+        </div>
+      </div>
+
       <div class="container">
         <a name="portfolio"></a>
-        <div class="row project-header">
-            <h2>Portfolio:~</h2>
+        <div class="row project-header underline-header">
+            <h2>Portfolio</h2>
         </div>
         <div class="row project-section">
           <div class="col-md-4 project-col">
@@ -416,14 +441,13 @@
 
       <a name="resume"></a>
       <div class="container">
-        <div class="row resume-header">
+        <div class="row resume-header underline-header">
           <div class="col-12">
-            <h2>Resume:~</h2>
+            <h2>Experience</h2>
           </div>
         </div>
         <div class="row resume-section">
           <div class="col-md-12">
-            <h3>Professional</h3>
           <ul class="list-group bg-dark">
             <li class="list-group-item job">
             <a name="studentmedia"></a>
@@ -466,8 +490,14 @@
             </li>
         </ul>
             </div>
+            </div>
+            <div class="row resume-header underline-header">
+                <div class="col-12">
+                  <h2>Education</h2>
+                </div>
+              </div>
+              <div class="row resume-section">
             <div class="col-12">
-              <h3>Education</h3>
             <ul class="list-group bg-dark">
                 <li class="list-group-item job">
                   <a name="psu"></a>
@@ -510,54 +540,6 @@
                 </li>
             </ul>
         </div>
-        </div>
-      </div>
-
-      <a name="about"></a>
-      <div class="container">
-        <div class="row project-header">
-            <h2>About Me:~</h2>
-        </div>
-        <div class="row project-section">
-          <div class="col-12">
-            <h3>Hi, I'm George.</h3>
-          </div>
-          <div class="col-sm-4">
-            <img
-              class="img-fluid"
-              src="img/george.jpeg"
-              alt="Photo of George"
-            />
-          </div>
-          <div class="col-sm-8">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-              lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-              Proin fermentum orci sit amet nisi finibus lacinia. Duis
-              ullamcorper in elit id venenatis. Ut efficitur non purus ac
-              laoreet. In a leo non velit posuere ultrices. Etiam vitae massa
-              sapien. Etiam auctor dolor quis sem malesuada ultricies.
-              Vestibulum quis venenatis risus, at pharetra tellus. Ut egestas
-              nunc ante, quis tristique dui blandit eu. Fusce ac orci at orci
-              dignissim rhoncus. Curabitur porttitor quis ligula vel vestibulum.
-              In a rhoncus justo. Ut nulla lorem, fermentum ut velit vitae,
-              fermentum commodo ligula. Praesent luctus erat id accumsan
-              placerat. Donec eget ipsum felis. Nam quam elit, malesuada quis
-              dui in, ullamcorper mattis sapien. Maecenas mollis scelerisque
-              cursus. Suspendisse nec augue urna. In ornare massa nec leo
-              interdum, non euismod nunc iaculis. Phasellus sit amet feugiat
-              metus. Aliquam porttitor lacus arcu, nec rhoncus elit lobortis ac.
-              Aenean ut ipsum ornare, sagittis ex vel, condimentum metus.
-              Aliquam vehicula sem eu purus finibus vehicula. Donec pretium nec
-              sem in interdum. Donec molestie ornare volutpat. Cras blandit
-              tristique volutpat. Pellentesque quis mi eu ipsum pharetra posuere
-              vitae a augue. Curabitur at justo scelerisque, tempor nunc ac,
-              egestas velit. Fusce pretium libero nibh, et pharetra quam
-              interdum ut. Donec vitae imperdiet lorem. Aenean imperdiet turpis
-              eget elit interdum porttitor. Interdum et malesuada fames ac ante
-              ipsum primis in faucibus.
-            </p>
-          </div>
         </div>
       </div>
 
