More formatting to align items visually by hierarchy

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <img
               class="img-fluid"
               src="img/salpies.png"
-              alt="Screenshot of the SALPies website design as seen when it was live"
+              alt="Screenshot of the Virtual Awards website design as seen when it was live"
             />
             <div class="badges">
               <span class="badge badge-html">HTML</span>
@@ -247,7 +247,7 @@
               <img
                 class="img-fluid"
                 src="img/sbs.png"
-                alt="Screenshot of Party In The Park 2020's website design as seen when it was live"
+                alt="Screenshot of Sub Basement Studios' website"
               />
             </a>
             <div class="badges">
@@ -279,7 +279,7 @@
               <img
                 class="img-fluid"
                 src="img/wrk.png"
-                alt="Screenshot of Party In The Park 2020's website design as seen when it was live"
+                alt="Screenshot of WRK Engineer's home page"
               />
             </a>
             <div class="badges">
@@ -442,9 +442,7 @@
       <a name="resume"></a>
       <div class="container">
         <div class="row resume-header underline-header">
-          <div class="col-12">
             <h2>Experience</h2>
-          </div>
         </div>
         <div class="row resume-section">
           <div class="col-md-12">
@@ -492,9 +490,7 @@
             </div>
             </div>
             <div class="row resume-header underline-header">
-                <div class="col-12">
-                  <h2>Education</h2>
-                </div>
+                  <h3>Education</h3>
               </div>
               <div class="row resume-section">
             <div class="col-12">
@@ -545,13 +541,10 @@
 
       <a name="contact"></a>
       <div class="container">
-        <div class="row project-header">
-            <h2>Contact:~</h2>
+        <div class="row project-header underline-header">
+            <h2>Contact</h2>
         </div>
         <div class="row project-section">
-          <div class="col-12">
-            <h3>Reach out today!</h3>
-          </div>
           <div class="col-12">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
