Adjust formatting, changes some classes to correct some of the alignment

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container">
         <div class="row project-section">
           <div class="col-12">
-            <h3>Hi, I'm George.</h3>
+            <h3 class="underline-header">Hi, I'm George.</h3>
           </div>
           <div class="col-sm-4">
             <img
@@ -120,14 +120,17 @@
             Ut efficitur non purus ac
             laoreet. In a leo non velit posuere ultrices. Etiam vitae massa
             sapien. Etiam auctor dolor quis sem malesuada ultricies.</p>
+            <p>If you're ready, go ahead and <a href="#contact">contact me!</a></p>
           </div>
         </div>
       </div>
 
       <div class="container">
         <a name="portfolio"></a>
-        <div class="row project-header underline-header">
-            <h2>Portfolio</h2>
+        <div class="row project-header">
+            <div class="col-md-12">
+            <h2 class="underline-header">Portfolio</h2>
+            </div>
         </div>
         <div class="row project-section">
           <div class="col-md-4 project-col">
@@ -441,8 +444,10 @@
 
       <a name="resume"></a>
       <div class="container">
-        <div class="row resume-header underline-header">
-            <h2>Experience</h2>
+        <div class="row resume-header">
+            <div class="col-md-12">
+                <h2 class="underline-header">Experience</h2>
+            </div>
         </div>
         <div class="row resume-section">
           <div class="col-md-12">
@@ -489,8 +494,10 @@
         </ul>
             </div>
             </div>
-            <div class="row resume-header underline-header">
-                  <h3>Education</h3>
+            <div class="row resume-header">
+                <div class="col-md-12">
+                  <h3 class="underline-header">Education</h3>
+                </div>
               </div>
               <div class="row resume-section">
             <div class="col-12">
@@ -541,8 +548,10 @@
 
       <a name="contact"></a>
       <div class="container">
-        <div class="row project-header underline-header">
-            <h2>Contact</h2>
+        <div class="row project-header">
+            <div class="col-md-12">
+            <h2 class="underline-header">Contact</h2>
+            </div>
         </div>
         <div class="row project-section">
           <div class="col-12">
