Add contact form & footer to page

--- a/index.html
+++ b/index.html
@@ -548,43 +548,55 @@
 
       <a name="contact"></a>
       <div class="container">
-        <div class="row project-header">
+        <div class="row contact-header">
             <div class="col-md-12">
             <h2 class="underline-header">Contact</h2>
             </div>
         </div>
-        <div class="row project-section">
-          <div class="col-12">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-              lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-              Proin fermentum orci sit amet nisi finibus lacinia. Duis
-              ullamcorper in elit id venenatis. Ut efficitur non purus ac
-              laoreet. In a leo non velit posuere ultrices. Etiam vitae massa
-              sapien. Etiam auctor dolor quis sem malesuada ultricies.
-              Vestibulum quis venenatis risus, at pharetra tellus. Ut egestas
-              nunc ante, quis tristique dui blandit eu. Fusce ac orci at orci
-              dignissim rhoncus. Curabitur porttitor quis ligula vel vestibulum.
-              In a rhoncus justo. Ut nulla lorem, fermentum ut velit vitae,
-              fermentum commodo ligula. Praesent luctus erat id accumsan
-              placerat. Donec eget ipsum felis. Nam quam elit, malesuada quis
-              dui in, ullamcorper mattis sapien. Maecenas mollis scelerisque
-              cursus. Suspendisse nec augue urna. In ornare massa nec leo
-              interdum, non euismod nunc iaculis. Phasellus sit amet feugiat
-              metus. Aliquam porttitor lacus arcu, nec rhoncus elit lobortis ac.
-              Aenean ut ipsum ornare, sagittis ex vel, condimentum metus.
-              Aliquam vehicula sem eu purus finibus vehicula. Donec pretium nec
-              sem in interdum. Donec molestie ornare volutpat. Cras blandit
-              tristique volutpat. Pellentesque quis mi eu ipsum pharetra posuere
-              vitae a augue. Curabitur at justo scelerisque, tempor nunc ac,
-              egestas velit. Fusce pretium libero nibh, et pharetra quam
-              interdum ut. Donec vitae imperdiet lorem. Aenean imperdiet turpis
-              eget elit interdum porttitor. Interdum et malesuada fames ac ante
-              ipsum primis in faucibus.
-            </p>
-          </div>
+        <div class="row">
+            <div class="col-md-4">
+                <p>Use the form on the right to send me a message!</p>
+            </div>
+            <div class="col-md-8">
+                <form class="form-contact">
+                    <div class="form-group row">
+                    <div class="col-md-4">
+                        <label for="name">Name:</label>
+                    </div>
+                    <div class="col-md-8">
+                        <input type="text" class="form-control" id="username" />
+                    </div>
+                    </div>
+                    <div class="form-group row">
+                    <div class="col-md-4">
+                        <label for="email">Email:</label>
+                    </div>
+                    <div class="col-md-8">
+                        <input type="email" class="form-control" id="email" />
+                    </div>
+                    </div>
+                    <div class="form-group row">
+                    <div class="col-md-4">
+                        <label for="message">Message:</label>
+                    </div>
+                    <div class="col-md-8">
+                        <textarea class="form-control" id="message" rows="5"></textarea>
+                    </div>
+                    </div>
+                    <div class="form-group row">
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary pull-right">Submit</button>
+                    </div>
+                    </div>
+                </form>
+            </div>
         </div>
       </div>
     </main>
+    <footer class="text-center">
+        <div class="container">
+            <p>George Olson, 2022</p>
+        </div>
+    </footer>
   </body>
 </html>
