Add custom font, change styles to include cards for projects

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         </div>
         <div class="row project-section">
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>KPSU RadioCo Player</h4>
             <img
               class="img-fluid"
@@ -165,7 +166,9 @@
               </p>
             </div>
           </div>
+          </div>
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>Virtual Awards</h4>
             <img
               class="img-fluid"
@@ -179,19 +182,18 @@
               <span class="badge badge-php">PHP</span>
             </div>
             <a
+              href="https://github.com/georgeolson92/Virtual-Awards"
+              target="_blank"
+              >View on GitHub</a
+            >
+            <a
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#SALP"
               aria-expanded="false"
               aria-controls="SALP"
               >Read More</a
-            >
-            |
-            <a
-              href="https://github.com/georgeolson92/Virtual-Awards"
-              target="_blank"
-              >View on GitHub</a
-            >
+              >
             <div class="collapse" id="SALP">
               <p>
                 A website built for an awards ceremony for SALP leaders at
@@ -203,7 +205,9 @@
               </p>
             </div>
           </div>
+          </div>
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>Party In The Park 2020</h4>
             <img
               class="img-fluid"
@@ -217,18 +221,17 @@
               <span class="badge badge-wp">WordPress</span>
             </div>
             <a
+              href="https://github.com/PSUInnovationLab/Party-in-the-Park-2020"
+              target="_blank"
+              >View on GitHub</a
+            >
+            <a
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#PIP"
               aria-expanded="false"
               aria-controls="PIP"
               >Read More</a
-            >
-            |
-            <a
-              href="https://github.com/PSUInnovationLab/Party-in-the-Park-2020"
-              target="_blank"
-              >View on GitHub</a
             >
             <div class="collapse" id="PIP">
               <p>
@@ -244,7 +247,9 @@
               </p>
             </div>
           </div>
+          </div>
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>Sub Basement Studios</h4>
             <a href="https://subbasementstudios.com/" target="_blank">
               <img
@@ -276,7 +281,9 @@
               </p>
             </div>
           </div>
+          </div>
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>WRK Engineers</h4>
             <a href="http://www.wrkengrs.com/" target="_blank">
               <img
@@ -311,7 +318,9 @@
               </p>
             </div>
           </div>
+          </div>
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>Somarakis</h4>
             <a href="https://www.somarakis.com" target="_blank">
               <img
@@ -344,43 +353,9 @@
               </p>
             </div>
           </div>
-          <div class="col-md-4 project-col hidden">
-            <h4>Loyalty Control Panel</h4>
-            <div class="badges">
-              <span class="badge badge-html">HTML</span>
-              <span class="badge badge-css">CSS</span>
-              <span class="badge badge-js">Javascript</span>
-              <span class="badge badge-net">.NET</span>
-            </div>
-            <p>
-              A new Angular-based web consoles for loyalty program management,
-              including management of localization features for multiple
-              languages and ensuring responsive design.
-            </p>
-          </div>
-          <div class="col-md-4 project-col hidden">
-            <h4>Loyalty Scheduler</h4>
-            <div class="badges">
-              <span class="badge badge-net">.NET</span>
-            </div>
-            <p>
-              A simple program that uses CRON triggers to run various jobs on
-              any given interval. Examples include weekly & monthly SQL exports
-              for clients, monthly information deletion.
-            </p>
-          </div>
-          <div class="col-md-4 project-col hidden">
-            <h4>GDPR User Obfuscation</h4>
-            <div class="badges">
-                <span class="badge badge-net">.NET</span>
-              </div>
-            <p>
-              A new featured extended into the loyalty program that removes &
-              obfuscates user data when requested by users, as required by EU
-              law beginning in 2018.
-            </p>
           </div>
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>.NET Event Manager</h4>
             <div class="badges">
               <span class="badge badge-html">HTML</span>
@@ -389,18 +364,17 @@
               <span class="badge badge-net">.NET</span>
             </div>
             <a
+              href="https://github.com/georgeolson92/NET-Event-Manager"
+              target="_blank"
+              >View on GitHub</a
+            >
+            <a
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#event"
               aria-expanded="false"
               aria-controls="event"
               >Read More</a
-            >
-            |
-            <a
-              href="https://github.com/georgeolson92/NET-Event-Manager"
-              target="_blank"
-              >View on GitHub</a
             >
             <div class="collapse" id="event">
                 <p>
@@ -409,7 +383,9 @@
                 </p>
             </div>
           </div>
+          </div>
           <div class="col-md-4 project-col">
+            <div class="card bg-dark">
             <h4>Stack Overflow</h4>
             <div class="badges">
               <span class="badge badge-html">HTML</span>
@@ -418,18 +394,17 @@
               <span class="badge badge-net">.NET</span>
             </div>
             <a
+              href="https://github.com/georgeolson92/StackOverflow"
+              target="_blank"
+              >View on GitHub</a
+            >
+            <a
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#stack"
               aria-expanded="false"
               aria-controls="stack"
               >Read More</a
-            >
-            |
-            <a
-              href="https://github.com/georgeolson92/StackOverflow"
-              target="_blank"
-              >View on GitHub</a
             >
             <div class="collapse" id="stack">
                 <p>
@@ -440,6 +415,8 @@
             </div>
           </div>
         </div>
+        </div>
+      </div>
       </div>
 
       <a name="resume"></a>
